--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/styles.css">
+    <!-- <link rel="stylesheet" href="./dist/styles.css"> -->
     <link rel="icon" href="./src/assets/img/checkRub.png">
     <title>ДелиЧек!</title>
   </head>
