--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./dist/styles.css"> -->
+    <link rel="stylesheet" href="./src/output.css">
     <link rel="icon" href="./src/assets/img/checkRub.png">
     <title>ДелиЧек!</title>
   </head>
   <body>
-    <div id="app" class="h-full"></div>
+    <div id="app" class="h-ful"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
